trunk/Archive2/fa/d4aaa67b235742/output
main.cpp:7:5: error: no matching function for call to 'foo'
    foo(1);
    ^~~
main.cpp:2:6: note: candidate function [with T = int] not viable: expects an l-value for 1st argument
void foo(T&) {
     ^
1 error generated.
